--- a/resources/assets/stylesheets/studip.scss
+++ b/resources/assets/stylesheets/studip.scss
@@ -54,3 +54,7 @@ html {
     overflow: auto;
     scroll-padding-top: calc(#{$bar-bottom-container-height} + 1em);
 }
+
+[v-cloak] {
+    display: none;
+}
