--- a/resources/assets/stylesheets/mixins/colors.less
+++ b/resources/assets/stylesheets/mixins/colors.less
@@ -1,6 +1,6 @@
 //if you like, change this (your brand color)
 @base-color: #28497c; // #28497c
-
+@contrast-blue: #2849d8;
 
 //PLEASE, no changes from here
 //@base-gray: #3c454e; // #3c454e
