add css linting for css, less and scss, re #606
Merge request studip/studip!724

--- a/resources/assets/stylesheets/less/breakpoints.less
+++ b/resources/assets/stylesheets/less/breakpoints.less
@@ -1,4 +1,4 @@
-//** Major Breakpoints
+// Major Breakpoints
 @major-breakpoint-tiny: 0;
 @major-breakpoint-small: 576px;
 @major-breakpoint-medium: 768px;
