--- a/resources/assets/stylesheets/less/variables.less
+++ b/resources/assets/stylesheets/less/variables.less
@@ -13,12 +13,12 @@
 @font-size-h5:            @font-size-base;
 @font-size-h6:            ceil((@font-size-base * 0.85)); // ~12px
 
-//** Unit-less `line-height` for use in components like buttons.
+// Unit-less `line-height` for use in components like buttons.
 @line-height-base:        1.428571429; // 20/14
-//** Computed "line-height" (`font-size` * `line-height`) for use with `margin`, `padding`, etc.
+// Computed "line-height" (`font-size` * `line-height`) for use with `margin`, `padding`, etc.
 @line-height-computed:    floor((@font-size-base * @line-height-base)); // ~20px
 
-//** By default, this inherits from the `<body>`.
+// By default, this inherits from the `<body>`.
 @headings-font-family:    inherit;
 @headings-font-weight:    550;
 @headings-line-height:    1.1;
@@ -32,7 +32,7 @@
 @drag_and_drop_z_index:    1000;
 @drag_and_drop_border:     1px solid @base-color;
 
-//Avatar sizes:
+// Avatar sizes:
 @avatar-small:  25px;
 @avatar-medium: 100px;
 @avatar-normal: 250px;
