--- a/resources/assets/stylesheets/less/header.less
+++ b/resources/assets/stylesheets/less/header.less
@@ -54,7 +54,8 @@
         min-height: 30px;
         padding: 0px;
         > li {
-            margin: 2px;
+            margin-left: 2px;
+            margin-right: 2px;
         }
     }
 }
