--- a/resources/assets/stylesheets/less/files.less
+++ b/resources/assets/stylesheets/less/files.less
@@ -243,6 +243,11 @@ div.file_select_possibilities.content_terms_of_use_icons {
     align-content: flex-start;
 }
 
+#file_suggest_oer {
+    display: flex;
+    margin-bottom: 3%;
+    margin-top: 2%;
+}
 
 table.documents tfoot td.sticky {
     position: sticky;
