fix search-filter, closes #1023
Closes #1023

Merge request studip/studip!780

--- a/resources/assets/stylesheets/scss/resources.scss
+++ b/resources/assets/stylesheets/scss/resources.scss
@@ -168,7 +168,10 @@ ul.resource-tree {
             }
 
             & > label {
-                input, select {
+                input[type=text],
+                input[type=number],
+                input[type=date],
+                select {
                     width: calc(100% - 2em);
                     height: 30px;
 
