--- a/resources/assets/stylesheets/highcontrast.scss
+++ b/resources/assets/stylesheets/highcontrast.scss
@@ -376,7 +376,6 @@ article.studip > header h1 > img {
     filter: invert(100%);
 }
 
-
 article.new.toggle > header h1 > a::before {
     filter: unset !important;
 }
@@ -1443,4 +1442,8 @@ button.skiplink {
         }
     }
 
+}
+
+.minor, .quiet {
+    color: $black;
 }
