add comment why [v-cloak] is used, fixes #1294
Closes #1294

Merge request studip/studip!790

--- a/resources/assets/stylesheets/studip.scss
+++ b/resources/assets/stylesheets/studip.scss
@@ -48,6 +48,8 @@
     width: 1px;
 }
 
+// Hide unrendered vue templates that have [v-cloak] set until they are rendered.
+// @see https://vuejs.org/api/built-in-directives.html#v-cloak
 [v-cloak] {
     display: none;
 }
