move sem-week calculation to php, closes #1147
Closes #1147

Merge request studip/studip!762

--- a/resources/assets/stylesheets/less/resources-print.less
+++ b/resources/assets/stylesheets/less/resources-print.less
@@ -1,5 +1,5 @@
 @media print {
-    #booking-plan-header-semrow-line #booking-plan-header-semweek-part,
+    #booking-plan-header-semweek-part,
     #booking-plan-header-resource-name-line,
     #booking-plan-header-seats-line,
     #booking-plan-header-administration_url-line {
