StEP-366: Add OAuth2 support to Stud.IP
Closes #1035 and #1198

Merge request studip/studip!635

--- a/resources/assets/stylesheets/studip.scss
+++ b/resources/assets/stylesheets/studip.scss
@@ -24,6 +24,7 @@
 @import "scss/my_courses";
 @import "scss/oer";
 @import "scss/qrcode";
+@import "scss/oauth2";
 @import "scss/report";
 @import "scss/resources";
 @import "scss/sidebar";
