--- a/resources/assets/stylesheets/scss/fullscreen.scss
+++ b/resources/assets/stylesheets/scss/fullscreen.scss
@@ -1,39 +1,16 @@
 $transition-duration: 300ms;
 
+.fullscreen-container {
+    flex-grow: 1;
+    margin-right: 12px;
+}
+
 .fullscreen-toggle {
     background: none;
-    border: 0px;
-    width: 28px;
-    height: 28px;
-
-    @include background-icon(zoom-in2, clickable, 20);
-    background-position: center;
-    background-repeat: no-repeat;
-
-    text-indent: 200%;
-    overflow: hidden;
-
-    clear: both;
-    float: right;
-
-    position: relative;
-    top: 1px;
-    right: 12px;
-
+    border: none;
     cursor: pointer;
-
-    z-index: 100;
-}
-
-#barBottomContainer,
-#flex-header,
-.secondary-navigation {
-    top: 0px;
-    margin-bottom: 0px;
-}
-#layout_footer {
-    max-height: 40px;
-    overflow: hidden;
+    float: right;
+    height: 28px;
 }
 
 html:not(.is-fullscreen-immediately) {
@@ -71,9 +48,7 @@ html.is-fullscreen {
         padding: 0px;
     }
 
-    .fullscreen-toggle {
-        @include background-icon(zoom-out2, clickable, 20);
-        margin-bottom: 16px;
-        right: 0px;
+    .fullscreen-toggle.unfullscreen {
+        display: block;
     }
 }
