--- a/resources/assets/stylesheets/scss/courseware.scss
+++ b/resources/assets/stylesheets/scss/courseware.scss
@@ -404,8 +404,7 @@ $consum_ribbon_width: calc(100% - 58px);
     position: absolute;
     right: -570px;
     top: 15px;
-    height: calc(100% - 32px);
-    max-height: 760px;
+    height: 100%;
     max-width: calc(100% - 28px);
     display: flex;
     flex-flow: row;
@@ -435,6 +434,7 @@ $consum_ribbon_width: calc(100% - 58px);
 
         .cw-ribbon-tool-content-nav {
             position: sticky;
+            height: 100%;
             top: 0;
             background-color: $white;
             margin: 0;
@@ -464,6 +464,7 @@ $consum_ribbon_width: calc(100% - 58px);
 
             >.cw-ribbon-tool-content-tablist {
                 width: 100%;
+                height: 100%;
                 >.cw-tabs-nav {
                     border: none;
                     width: calc(100% - 48px);
@@ -483,9 +484,10 @@ $consum_ribbon_width: calc(100% - 58px);
                     border: none;
                     border-top: solid thin $content-color-40;
                     padding: 0;
+                    height: calc(100% - 58px);
 
                     >.cw-tab {
-                        max-height: 700px;
+                        height: calc(100% - 22px);
                         padding: 14px 8px 8px 8px;
                         position: relative;
                         overflow-y: auto;
@@ -494,6 +496,7 @@ $consum_ribbon_width: calc(100% - 58px);
                         scrollbar-color: $base-color $white;
 
                         &.cw-ribbon-tool-blockadder-tab {
+                            height: 100%;
                             overflow: hidden;
                             padding: 0;
                         }
