--- a/resources/assets/stylesheets/studip.scss
+++ b/resources/assets/stylesheets/studip.scss
@@ -12,6 +12,7 @@
 @import "scss/admin-courses";
 @import "scss/admission";
 @import "scss/avatar";
+@import "scss/blockquote";
 @import "scss/blubber";
 @import "scss/contentbar";
 @import "scss/contents";
