replace old icon, closes #1369
Closes #1369

Merge request studip/studip!863

--- a/resources/assets/stylesheets/less/schedule.less
+++ b/resources/assets/stylesheets/less/schedule.less
@@ -139,6 +139,10 @@ div.schedule_edit_entry > form {
     position: absolute;
     right: 0;
     top: 0;
+
+    img {
+        .square(16px);
+    }
 }
 
 div.invisible_entry {
