--- a/resources/assets/stylesheets/scss/blubber.scss
+++ b/resources/assets/stylesheets/scss/blubber.scss
@@ -207,6 +207,9 @@
                     > .name {
                         display: none;
                     }
+                    blockquote {
+                        background-color: rgba(255, 255, 255, 0.1);
+                    }
                 }
                 > .avatar {
                     display: none;
