--- a/resources/assets/stylesheets/studip.less
+++ b/resources/assets/stylesheets/studip.less
@@ -108,6 +108,25 @@ ul + br, table + br {
     display: none;
 }
 
+blockquote {
+    border-left: 3px solid @brand-color-lighter;
+    padding: 5px;
+    margin: 8px;
+    padding-left: 8px;
+    margin-left: 0px;
+    background-color: rgba(0,0,0,0.05);
+    > .author {
+    	background-color: @brand-color-lighter;
+        padding: 4px;
+        margin-left: -10px;
+        padding-left: 15px;
+        margin-right: -5px;
+        color: white;
+        margin-top: -5px;
+        margin-bottom: 5px;
+    }
+}
+
 dd { margin-left: 1.5em; }
 
 input.placeholder { opacity: 0.7; }
