black font color, fixes #1373

--- a/resources/assets/stylesheets/studip.less
+++ b/resources/assets/stylesheets/studip.less
@@ -194,10 +194,10 @@ ul.clean, ol.clean {
 
 
 .minor {
-    color: gray;
+    color: black;
     font-size: 0.75em;
 }
-.quiet { color: gray; }
+.quiet { color: black; }
 
 .middle      { vertical-align: middle; }
 .text-bottom { vertical-align: text-bottom; }
