--- a/resources/assets/stylesheets/less/index.less
+++ b/resources/assets/stylesheets/less/index.less
@@ -113,7 +113,7 @@ div.index_container {
                     font-size: 1.5em;
                     p {
                         font-size: 0.5em;
-                        color: @light-gray-color;
+                        color: @black;
                     }
                 }
             }
