footer hover color, fixes #1379

--- a/resources/assets/stylesheets/less/header.less
+++ b/resources/assets/stylesheets/less/header.less
@@ -42,7 +42,7 @@ html {
         margin: 0 6px;
         text-decoration: none;
         &:hover {
-            color: @contrast-content-hovergray;
+            text-decoration: underline;
         }
     }
 }
