white hover color, fixes #1380

--- a/resources/assets/stylesheets/less/helpbar.less
+++ b/resources/assets/stylesheets/less/helpbar.less
@@ -90,7 +90,7 @@
             color: #fff;
         }
         a:hover, a:active {
-            color: @light-gray-color-40;
+            color: @white;
             text-decoration: underline;
         }
         > li {
