migrate less to sass, closes #1482
Closes #1482

Merge request studip/studip!926

--- a/resources/assets/stylesheets/mixins/misc.scss
+++ b/resources/assets/stylesheets/mixins/misc.scss
@@ -15,3 +15,16 @@
         clear: both;
     }
 }
+@mixin list-unstyled {
+    padding-left: 0;
+    list-style: none;
+}
+
+
+@mixin size($height, $width) {
+    width: $width;
+    height: $height;
+}
+@mixin square($size) {
+    @include size($size, $size);
+}
