--- a/resources/assets/stylesheets/studip.scss
+++ b/resources/assets/stylesheets/studip.scss
@@ -9,6 +9,7 @@
 @import "scss/visibility";
 
 @import "scss/actionmenu";
+@import "scss/admin";
 @import "scss/admin-courses";
 @import "scss/admission";
 @import "scss/avatar";
@@ -21,10 +22,15 @@
 @import "scss/forum";
 @import "scss/fullscreen";
 @import "scss/progress_indicator.scss";
+@import "scss/links";
 @import "scss/my_courses";
+@import "scss/mvv";
 @import "scss/oer";
 @import "scss/qrcode";
 @import "scss/oauth2";
+@import "scss/pagination";
+@import "scss/profile";
+@import "scss/raumzeit";
 @import "scss/report";
 @import "scss/resources";
 @import "scss/sidebar";
@@ -32,6 +38,12 @@
 @import "scss/table_of_contents";
 @import "scss/wiki";
 @import "scss/select";
+@import "scss/skiplinks";
+@import "scss/start";
+@import "scss/scroll-to-top";
+@import "scss/studygroup";
+@import "scss/tfa";
+@import "scss/tour";
 
 @import "scss/grid";
 
