--- a/resources/assets/stylesheets/scss/admin.scss
+++ b/resources/assets/stylesheets/scss/admin.scss
@@ -7,12 +7,12 @@
     padding-left: 0px;
     position: relative;
     text-align: center;
-    background-color: @content-color-20;
-    .background-icon('upload', 'clickable', 50);
+    background-color: $content-color-20;
+    @include background-icon(upload, clickable, 50);
     background-repeat: no-repeat;
     background-position: center 10px;
     padding-top: 70px;
-    color: @base-color;
+    color: $base-color;
     cursor: pointer;
 
     input[type=file] {
@@ -27,9 +27,9 @@
     }
 
     &.hovered {
-        background-color: @base-color;
-        .background-icon('upload', 'info_alt', 50);
-        color: white;
+        background-color: $base-color;
+        @include background-icon(upload, info_alt, 50);
+        color: $white;
     }
 }
 .js .widget-links .drag-and-drop {
@@ -40,7 +40,7 @@ fieldset.attribute_table {
     border-collapse: collapse;
 
     ul {
-        margin: 0px;
+        margin: 0;
     }
     .sem_class_name .sem_class_edit {
         display: none;
@@ -73,7 +73,7 @@ fieldset.attribute_table {
         background-color: #dddddd;
         font-size: 12px;
         text-align: center;
-        margin: 0px;
+        margin: 0;
     }
     div[container] > div.droparea {
         min-height: 30px;
@@ -127,28 +127,28 @@ fieldset.attribute_table {
 
 .course-admin {
     .course-completion {
-        .hide-text();
-        .square(16px);
+        @include hide-text();
+        @include square(16px);
         background-repeat: no-repeat;
         display: block;
     }
 
     th .course-completion {
-        .background-icon('radiobutton-checked', 'clickable');
+        @include background-icon(radiobutton-checked, clickable);
     }
 
     td .course-completion {
-        .background-icon('radiobutton-checked', 'status-red');
+        @include background-icon(radiobutton-checked, status-red);
 
         &[data-course-completion="1"] {
-            .background-icon('radiobutton-checked', 'status-yellow');
+            @include background-icon(radiobutton-checked, status-yellow);
         }
         &[data-course-completion="2"] {
-            .background-icon('radiobutton-checked', 'status-green');
+            @include background-icon(radiobutton-checked, status-green);
         }
 
         &.ajaxing {
-            background-image: url("@{image-path}/ajax_indicator_small.gif");
+            background-image: url("#{$image-path}/ajax_indicator_small.gif");
         }
     }
 }
