--- a/resources/assets/stylesheets/scss/raumzeit.scss
+++ b/resources/assets/stylesheets/scss/raumzeit.scss
@@ -15,27 +15,27 @@ div.at_least_one_teacher {
 }
 
 .is_ex_termin {
-    color: @dark-gray-color-80;
+    color: $dark-gray-color-80;
     text-decoration: line-through;
 }
 
 .contentbox.timesrooms {
     > form {
         article {
-            border-color: @content-color-40;
+            border-color: $content-color-40;
             border-style: solid;
             border-width: 1px;
             margin: 10px;
 
             > section {
-                max-height: 0px;
+                max-height: 0;
                 opacity: 0;
                 padding: 0;
                 transition: opacity 0.3s;
             }
 
             &:not(.open) header ~ * {
-                max-height: 0px;
+                max-height: 0;
                 opacity: 0;
                 overflow: auto;
                 transition: opacity 0.3s;
@@ -64,7 +64,7 @@ div.at_least_one_teacher {
 
             // Show visual toggle indicator
             header h1 a {
-                .icon('before', 'arr_1right', 'clickable');
+                @include icon(before, arr_1right, clickable);
             }
 
             &.open {
@@ -76,23 +76,22 @@ div.at_least_one_teacher {
     }
     article header {
         &.red {
-            border-left: 3px solid @red;
+            border-left: 3px solid $red;
         }
         &.yellow {
-            border-left: 3px solid @activity-color;
+            border-left: 3px solid $activity-color;
         }
         &.green {
-            border-left: 3px solid @green;
+            border-left: 3px solid $green;
         }
         &.red .tooltip-icon {
-            .icon('before', 'arr_1right', 'clickable');
-            .icon('before', 'radiobutton-checked', 'status-red');
+            @include icon(before, radiobutton-checked, status-red);
         }
         &.yellow .tooltip-icon {
-            .icon('before', 'radiobutton-checked', 'status-yellow');
+            @include icon(before, radiobutton-checked, status-yellow);
         }
         &.green .tooltip-icon {
-            .icon('before', 'radiobutton-checked', 'status-green');
+            @include icon(before, radiobutton-checked, status-green);
         }
     }
     form.default {
