--- a/resources/assets/stylesheets/scss/tfa.scss
+++ b/resources/assets/stylesheets/scss/tfa.scss
@@ -13,7 +13,7 @@ form.default {
     .tfa-code-input {
         text-align: center;
         .tfa-code-wrapper {
-            border: 1px solid @base-gray;
+            border: 1px solid $base-gray;
             display: inline-block;
             font-size: 2em;
             line-height: 2em;
@@ -21,7 +21,7 @@ form.default {
         }
 
         input[type="number"] {
-            background: @dark-gray-color-10;
+            background: $dark-gray-color-10;
             border: 0;
             box-sizing: unset;
             font-family: monospace;
@@ -33,15 +33,15 @@ form.default {
             text-align: center;
             vertical-align: top;
 
-            color: @base-gray;
+            color: $base-gray;
             &:focus {
-                background-color: @activity-color-20;
-                color: #000;
+                background-color: $activity-color-20;
+                color:$black;
                 outline: 0;
             }
             &:invalid {
                 box-shadow: none;
-                color: #888;
+                color: $base-gray;
                 outline: 0;
             }
 
