StEP00368: Update des CKEditors auf v5
Closes #1083, #1226, #1154, and #1088

Merge request studip/studip!641

--- a/resources/assets/stylesheets/less/forms.less
+++ b/resources/assets/stylesheets/less/forms.less
@@ -81,7 +81,7 @@ form.default {
         min-height: 6em;
     }
 
-    label:not(.undecorated) {
+    label:not(.undecorated):not(.ck-voice-label) {
         display: block;
         margin-bottom: @gap;
         max-width: 100%;
