--- a/resources/assets/stylesheets/less/variables.less
+++ b/resources/assets/stylesheets/less/variables.less
@@ -9,9 +9,9 @@
 @font-size-h1:            floor((@font-size-base * 1.4)); // ~36px
 @font-size-h2:            floor((@font-size-base * 1.2)); // ~30px
 @font-size-h3:            ceil((@font-size-base * 1.1)); // ~24px
-@font-size-h4:            @font-size-base; // ~18px
+@font-size-h4:            @font-size-base; // 14px
 @font-size-h5:            @font-size-base;
-@font-size-h6:            ceil((@font-size-base * 0.85)); // ~12px
+@font-size-h6:            @font-size-base;
 
 // Unit-less `line-height` for use in components like buttons.
 @line-height-base:        1.428571429; // 20/14
@@ -22,7 +22,7 @@
 @headings-font-family:    inherit;
 @headings-font-weight:    550;
 @headings-line-height:    1.1;
-@headings-color:          @base-gray;
+@headings-color:          @black;
 
 // Design specific
 @bar-bottom-container-height: 40px;
