--- a/resources/assets/stylesheets/scss/sidebar.scss
+++ b/resources/assets/stylesheets/scss/sidebar.scss
@@ -182,10 +182,10 @@ div#sidebar-navigation {
 
             // Obtuse angle looks kinda ugly with borders
             &:before {
-                border-left-width: floor((14px * 2 / 3));
+                border-left-width: floor(calc(14px * 2 / 3));
             }
             &:after {
-                border-left-width: floor((14px * 2 / 3 - 1));
+                border-left-width: floor(calc(14px * 2 / 3 - 1px));
             }
         }
     }
