fixed error when deleting booking interval from a booking with repetitions, closes #704
Closes #704

Merge request studip/studip!886

--- a/resources/assets/stylesheets/scss/resources.scss
+++ b/resources/assets/stylesheets/scss/resources.scss
@@ -521,3 +521,9 @@ form#resolve-request, form#decline-request {
         padding-bottom: 10px;
     }
 }
+
+
+button.takes-place-status-toggle {
+    border: none;
+    background: none;
+}
