--- a/resources/assets/stylesheets/less/forms.less
+++ b/resources/assets/stylesheets/less/forms.less
@@ -81,7 +81,7 @@ form.default {
         min-height: 6em;
     }
 
-    label:not(.undecorated):not(.ck-voice-label) {
+    label:not(.undecorated, .ck-voice-label) {
         display: block;
         margin-bottom: @gap;
         max-width: 100%;
